# xyz

./: .env.example  .gitignore  .npmrc  .nxignore  LICENSE  README.md  SECURITY.md  docker-compose.yml  eslint.config.mjs  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json
apps/aegis-ledger-writer/: package.json  project.json
apps/pilot-agent/: .env.example  README.md  package.json  tsconfig.json
apps/web/: next.config.js  project.json  sentry.edge.config.ts  tsconfig.json  vitest.config.ts
apps/web-console/: eslint.config.mjs  next.config.ts  package.json  project.json  tsconfig.json  vercel.json
apps/web-docs/: .env.example  eslint.config.mjs  package.json  project.json  vercel.json
apps/web-marketing/: next.config.ts  package.json  project.json  vercel.json
apps/web-platform/: eslint.config.mjs  next.config.ts  package.json  project.json  vercel.json
fixtures/aegis/: invalid-malformed-signature.json  invalid-missing-actor.json  valid-tier-a-event.json
prisma/: schema.prisma  seed-superadmin.ts  seed.ts
salanor-go/: README.md
salanor-go/aegis/: README.md  aegis_test.go  canonical.go  go.mod  ingest.go  verify.go
sdks/: README.md
sdks/conformance/: README.md
sdks/go/: conformance_test.go
sdks/python/: README.md  pyproject.toml
sdks/python/salanor_aegis/: __init__.py  canonical.py  enrich_payload.py  events.py  ids.py  ingest.py  policy.py  record.py  span.py  types.py
sdks/python/tests/: test_canonical.py  test_conformance_vectors.py  test_enrich_payload.py  test_policy_event.py
(+713 files in other folders)
